Adjusted anime boxes

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                 <button id="action-watch-button">Watch</button>
                 <button id="action-download-button">Download</button>
             </div>
-        </div>#
+        </div>
     </div>
 </body>
 </html>
