Fixed download & improved,req avail. ep via button

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <!-- Main Content Wrapper -->
     <div class="main-content">
         <header>
-            <h1>Anime Season Network</h1>
+            <h1>Anime Track&Crack</h1>
         </header>
 
         <section id="filters" class="filters-container">
