last playeed anime + timestamp now in localstorage

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Video Player Modal -->
     <div id="video-modal" class="modal" style="display: none;">
-        <span id="close-modal" class="close">&times;</span>
+        <span id="close-video-modal" class="close">&times;</span>
         <video id="video-player" controls></video>
     </div>
 
