bit of that bit of this, but no session management

--- a/webapp/static/css/styles.css
+++ b/webapp/static/css/styles.css
@@ -208,6 +208,86 @@ a {
     background: rgba(244, 67, 54, 0.8);
 }
 
+/* CSS for the action switch */
+.action-switch-container {
+    display: flex;
+    align-items: center;
+    margin-top: 60px;
+    margin-right: -100px;
+    padding-right: 10px;
+    padding-top: 10px;
+}
+
+.action-switch-label {
+    margin-right: 10px;
+}
+
+.action-switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 24px;
+}
+
+.action-switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.action-switch-slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #888;
+    transition: 0.4s;
+    border-radius: 24px;
+    transition: background-color 1s, transform 1s;
+}
+
+.action-switch-slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 2px;
+    bottom: 2px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 50%;
+    transition: transform 0.4s;
+}
+
+.action-text {
+    font-weight: bold;
+    margin-left: 5px;
+    transition: color 0.3s;
+}
+
+.action-switch input:checked + .action-switch-slider {
+    background-color: rgba(76, 175, 79, 0.8);
+}
+
+.action-switch input:not(:checked) + .action-switch-slider {
+    background-color: rgba(244, 67, 54, 0.8);
+}
+
+.action-switch input:checked + .action-switch-slider:before {
+    transform: translateX(26px);
+}
+
+.controls-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+}
+
+/* Refresh Episode Button */
+
 .episode-button {
     background-color: #444;
     color: #ffffff;
