--- a/webapp/static/css/styles.css
+++ b/webapp/static/css/styles.css
@@ -212,8 +212,7 @@ a {
 .action-switch-container {
     display: flex;
     align-items: center;
-    margin-top: 60px;
-    margin-right: -100px;
+    margin-top: 100px;
     padding-right: 10px;
     padding-top: 10px;
 }
@@ -297,8 +296,7 @@ a {
     margin: 1.5px;
 }
 .refresh-episodes-button {
-    margin-top: 50px;
-    margin-left: 50%;
+    margin-top: 100px;
 }
 
 .episode-button:hover {
@@ -342,6 +340,34 @@ a {
     font-size: 12px;
     z-index: 1002;
 }
+
+/* Countdown Button Styles */
+.countdown-container {
+    position: block;
+    padding: 20px;
+    margin-top:100px;
+}
+
+.countdown-button {
+    background-color: #555;
+    color: #fff;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 5px;
+    font-size: 14px;
+    transition: background-color 0.3s;
+    cursor: default;
+}
+
+.countdown-button:hover {
+    background-color: #666;
+}
+
+.countdown-text {
+    margin-left: 5px;
+    font-weight: bold;
+}
+
 
 /* Modals */
 .modal {
