added resolutions in video player

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,12 @@
 <body>
     <!-- Video Player Modal -->
     <div id="video-modal" class="modal" style="display: none;">
+        <div class="resolution-selector">
+            <label for="resolution">Resolution:</label>
+            <select id="resolution">
+                <!-- Options are populated dynamically -->
+            </select>
+        </div>
         <span id="close-video-modal" class="close">&times;</span>
         <video id="video-player" controls></video>
     </div>
